--- a/T17_Libreria/ES/index.html
+++ b/T17_Libreria/ES/index.html
@@ -34,7 +34,7 @@
         </section>
         <section>
             <h2>¡Nuestros productos!</h2>
-            <p>En nuestra librería encontrarás una gran variedad de libros de diferentes géneros y autores. ¡No dudes en visitarnos!</p>
+            <p>Descubre nuestra selección de libros más vendidos y las últimas novedades en el mundo literario. ¡Encuentra tu próxima lectura favorita!</p>
             <img src="/assets/img/libro.jpg" alt="Libros"><br><br>
             <a href="/ES/productos.html">Ver productos</a>
         </section>
@@ -47,5 +47,12 @@
     <footer>
         <p> &copy; 2025 La Casa Del Libro </p>
     </footer>
+    <dialog id="carrito" show="true">
+        <h1>Carrito de la compra</h1>
+        <ul id="carrito-lista">
+            <!-- Carrito -->
+        </ul>
+        <button onclick="alert('Compra realizada')">Realizar Compra</button>
+    </dialog>
 </body>
 </html>
