--- a/T17_Libreria/index.html
+++ b/T17_Libreria/index.html
@@ -33,7 +33,7 @@
         </section>
         <section>
             <h2>¡Nuestros productos!</h2>
-            <p>En nuestra librería encontrarás una gran variedad de libros de diferentes géneros y autores. ¡No dudes en visitarnos!</p>
+            <p>Descubre nuestra selección de libros más vendidos y las últimas novedades en el mundo literario. ¡Encuentra tu próxima lectura favorita!</p>
             <img src="/assets/img/libro.jpg" alt="Libros"><br><br>
             <a href="/ES/productos.html">Ver productos</a>
         </section>
@@ -46,18 +46,9 @@
     <dialog id="carrito" show="true">
         <h1>Carrito de la compra</h1>
         <ul id="carrito-lista">
-            <li class="carrito-producto">
-                <img src="/assets/img/libreria.jpeg" alt="" id="imagen">
-                <div>
-                    <h2 id="nombre">Test </h2>
-                    <p id="precio">10€ </p>
-                    <p id="cantidad">12u </p>
-                    <button><img src="/assets/img/icons/anadir.svg"></button>
-                    <button><img src="/assets/img/icons/quitar.svg"></button>
-                    <button><img src="/assets/img/icons/eliminar.svg"></button>
-                </div>
-            </li>
+            <!-- Carrito -->
         </ul>
+        <button onclick="alert('Compra realizada')">Realizar Compra</button>
     </dialog>
     <footer>
         <p> &copy; 2025 La Casa Del Libro </p>
